Bug 58346 - Conditional formatting: "Top/Bottom 10 Elements" condition shows one value more than asked.
Summary: Conditional formatting: "Top/Bottom 10 Elements" condition shows one value mo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 21:09 UTC by Jean-Baptiste Faure
Modified: 2012-12-17 23:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bugdoc with CF "Top/Bottom 10 elements" condition (11.80 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-12-15 21:09 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2012-12-15 21:09:49 UTC
Created attachment 71565 [details]
bugdoc with CF "Top/Bottom 10 elements" condition

Steps to reproduce:
1/ open the attached spreadsheet with LO 4.0 beta1 : you see the 4 largest values in red (style Result) and the 3 lowest in green (Style Result2)
2/ menu Format > Conditional Formatting > Manage and edit each condition
==> you can see that the number of largest / lowest values to highlight are 3 and 2. So the CF shows you one value more than you asked.

Best regards. JBF
Comment 1 Not Assigned 2012-12-17 23:00:15 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3df19b23d80a23e8f42cf766499b1a23ecfe923

first check that the number of cells has not been reached yet, fdo#58346



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2012-12-17 23:11:59 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=313575bd0d307ab37b0f3ab0d2c47330d546eaa1&g=libreoffice-4-0

first check that the number of cells has not been reached yet, fdo#58346


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.