first check that the number of cells has not been reached yet, fdo#58346

Change-Id: I0fea5719f524584acdbbc560c47b3c427c174845